--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 <body class="template-color-1 home-sticky spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
 
+    <div class="loader_bg">
+        <div class="loader"></div>
+    </div>
+
     <div class="cursor"></div>
 
     <!-- start Header area -->
