--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="template-color-1 home-sticky spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
 
     <div class="loader_bg">
-        <div class="loade"></div>
+        <div class="loader"></div>
     </div>
 
     <div class="cursor"></div>
